--- a/package.json
+++ b/package.json
@@ -1,16 +1,14 @@
 {
-  "name": "material-dashboard-2-react",
-  "version": "2.2.0",
+  "name": "dcg-admin-dashboard",
+  "version": "1.0.0",
   "private": true,
-  "author": "Creative Tim",
-  "license": "See license in https://www.creative-tim.com/license",
-  "description": "React version of Material Dashboard 2 by Creative Tim",
-  "bugs": {
-    "url": "https://github.com/creativetimofficial/material-dashboard-react/issues"
-  },
+  "author": "Direct Connect Global",
+  "license": "UNLICENSED",
+  "description": "Internal Admin Dashboard for Direct Connect Global",
+  "homepage": "/",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/creativetimofficial/material-dashboard-react.git"
+    "url": "git+https://github.com/andersonjd777-boop/material-dashboard-react.git"
   },
   "dependencies": {
     "@emotion/cache": "11.10.8",
@@ -18,8 +16,13 @@
     "@emotion/styled": "11.10.8",
     "@mui/icons-material": "5.11.16",
     "@mui/material": "5.12.3",
+    "@openreplay/tracker": "^17.1.6",
+    "axios": "^1.6.2",
+    "bootstrap": "^5.3.8",
     "chart.js": "4.3.0",
     "chroma-js": "2.4.2",
+    "jsonwebtoken": "^9.0.2",
+    "jwt-decode": "^4.0.0",
     "prop-types": "15.8.1",
     "react": "18.2.0",
     "react-chartjs-2": "5.2.0",
@@ -28,6 +31,7 @@
     "react-router-dom": "6.11.0",
     "react-scripts": "5.0.1",
     "react-table": "7.8.0",
+    "reactstrap": "^9.2.3",
     "stylis": "4.1.4",
     "stylis-plugin-rtl": "2.1.1",
     "yup": "1.1.1"
