--- a/package.json
+++ b/package.json
@@ -18,7 +18,6 @@
     "@mui/material": "5.12.3",
     "@openreplay/tracker": "^17.1.6",
     "axios": "^1.6.2",
-    "bootstrap": "^5.3.8",
     "chart.js": "4.3.0",
     "chroma-js": "2.4.2",
     "dompurify": "^3.3.1",
@@ -30,7 +29,6 @@
     "react-router-dom": "^7.13.0",
     "react-scripts": "5.0.1",
     "react-table": "7.8.0",
-    "reactstrap": "^9.2.3",
     "stylis": "4.1.4",
     "stylis-plugin-rtl": "2.1.1",
     "yup": "1.1.1"
@@ -40,7 +38,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "install:clean": "rm -rf node_modules/ && npm install && npm start"
+    "install:clean": "rm -rf node_modules/ && npm ci && npm start"
   },
   "eslintConfig": {
     "extends": [
@@ -72,6 +70,7 @@
     "prettier": "2.8.8"
   },
   "overrides": {
-    "svgo": "3.0.2"
+    "svgo": "3.0.2",
+    "ajv": "8.12.0"
   }
 }
