--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -96,7 +96,7 @@ jobs:
           path: build/
 
       - name: Deploy via SSH
-        uses: appleboy/scp-action@917f8b81dfc1ccd331fef9e2d61bdc6c8be94571 # v0.1.7
+        uses: appleboy/scp-action@v0.1.7
         with:
           host: ${{ secrets.DEPLOY_HOST }}
           username: ${{ secrets.DEPLOY_USER }}
@@ -106,7 +106,7 @@ jobs:
           strip_components: 1
 
       - name: Post-deploy health check
-        uses: appleboy/ssh-action@2ead5e36573f08b82fbfce1504f1a4b2d72a5f5c # v1.2.0
+        uses: appleboy/ssh-action@v1.2.0
         with:
           host: ${{ secrets.DEPLOY_HOST }}
           username: ${{ secrets.DEPLOY_USER }}
