feat: multi-auth login, lazy loading, structured logging, tests
- Add Google OAuth + OTP code login to AuthContext & SignIn
- Convert all route imports to React.lazy() with Suspense fallback
- Fix auth flash bug (remove window.location redirect on 401)
- Replace console.* with structured logger across all services
- Add unit tests for ErrorBoundary, ProtectedRoute, AuthContext, API
- Add bcryptjs, testing-library dependencies
- Rename Work Calendar to DCG Calendar in nav

--- a/.env.example
+++ b/.env.example
@@ -10,6 +10,9 @@
 # Production: https://api.directconnectglobal.com/api
 REACT_APP_API_URL=
 
+# Google OAuth Client ID (required for Google Sign-In)
+REACT_APP_GOOGLE_CLIENT_ID=
+
 # OpenReplay — Session Replay (optional)
 REACT_APP_OPENREPLAY_PROJECT_KEY=
 REACT_APP_OPENREPLAY_INGEST_POINT=https://api.openreplay.com/ingest
